[package]
name = "jieba-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
html-escape = "0.2.13"
jieba-rs = "0.6.8"
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"
lto = true
# Generate debug info for twiggy for size profiling. Any debug info is
# stripped by wasm-pack.
debug = true
